[package]
name = "threshold_bls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
blst = "0.3.11"
rand = "0.8.5"
anyhow = "1.0.75"
reqwest = "0.11.22"
hex = "0.4.3"
sha2 = "0.10.8"
